<resources>
    <string name="app_name">AppFinal</string>


    <string name="login.message.signin">Iniciar Sesión</string>
    <string name="login.message.signup">Registrate</string>
    <string name="login.message.email">Correo electrónico</string>
    <string name="login.message.password">Password</string>
    <string name="log_out_item">Cerrar Sesión</string>


    <string name="login.message.signin.facebook">INGRESAR CON FACEBOOK</string>
    <string name="login.message.signin.googleplus">INGRESAR CON GOOGLE PLUS</string>


    <string name="home_item">INICIO</string>
    <string name="pago_item">PAY-PAL</string>
    <string name="confirma_item">CONFIRMACION</string>
    <string name="contacta_item">CONTACTANOS</string>


    <string name="configuracion_item">CONFIGURACION</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
