<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_pago"
            android:icon="@drawable/ic_home"
            android:title="@string/pago_item" />
        <item
            android:id="@+id/nav_confirma"
            android:icon="@drawable/ic_home"
            android:title="@string/confirma_item" />
        <item
            android:id="@+id/nav_contactos"
            android:icon="@drawable/ic_home"
            android:title="@string/contacta_item" />

        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>

    </group>

</menu>